--- a/main/Settings.apk/res/values-cs/strings.xml
+++ b/main/Settings.apk/res/values-cs/strings.xml
@@ -2798,7 +2798,7 @@ Umožňují to důvěryhodné identifikační údaje nainstalované ve vašem za
   <string name="trackball_wake_title">Trackball probuzení</string>
   <string name="transition_animation_scale_title">Měřítko animace přeměny</string>
   <string name="translation_contributors_summary"/>
-  <string name="translation_contributors_title">LionMobile.cz</string>
+  <string name="translation_contributors_title">LevneSmartphony.cz</string>
   <string name="trusted_credentials">Důvěryhodná pověření</string>
   <string name="trusted_credentials_disable_confirmation">Zakázat certifikát CA systému?</string>
   <string name="trusted_credentials_disable_label">Zakázat</string>
