--- a/main/Provision.apk/res/values-cs-rCZ/strings.xml
+++ b/main/Provision.apk/res/values-cs-rCZ/strings.xml
@@ -52,7 +52,7 @@
   <string name="terms_of_use">Podmínky používání</string>
   <string name="terms_of_use_label">Musíte souhlasit s Podmínkami používání a Podmínkami soukromí pokud chcete používat MIUI</string>
   <string name="title_congratulation">Hotovo! 
-Přihlaste se na www.miuios.cz :)</string>
+Přihlaste se na XiaomiMobile.cz</string>
   <string name="user_agreement">Podmínky používání</string>
   <string name="welcome">Vítejte</string>
 </resources>
